<resources>
    <string name="app_name">ComprensionTorresAlvarezAngel</string>
    <string name="here_text">Aqui el texto del EditText</string>
    <string name="add_text">Ingresa un texto</string>
    <string name="phone">Telefono</string>
    <string name="Apellido">Apellido</string>
    <string name="correo">Correo</string>
    <string name="boton">boton</string>
    <string name="todo">TODO</string>
</resources>